--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -84,6 +84,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Admin Dashboard</a>
+                    </li>
                     <li class="nav-item ms-lg-3">
                         <a href="/" class="btn btn-sm btn-primary-gradient rounded-pill px-4">New Analysis</a>
                     </li>
