--- a/frontend/templates/upload.html
+++ b/frontend/templates/upload.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Admin Dashboard</a>
+                    </li>
                 </ul>
             </div>
         </div>
