--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -147,7 +147,8 @@
                                 class="btn btn-sm btn-outline-secondary flex-grow-1">
                                 <i class="bi bi-download me-1"></i> CV
                             </a>
-                            <a href="#" class="btn btn-sm btn-primary-gradient flex-grow-1">View Details</a>
+                            <a href="/admin/analysis/{{ cand.id }}"
+                                class="btn btn-sm btn-primary-gradient flex-grow-1">View Details</a>
                         </div>
                     </div>
                 </div>
